--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,9 @@ body,
 }
 
 body {
-  margin: 0;
+  user-select: none;
+  font-family: sans-serif;
+  color: white;
+  background-color: rgb(20, 20, 20);
+  color-scheme: dark;
 }
